styles.css
div.legendTooltip {
    position: absolute;
    text-align: center;
    padding: 2px;
    font: 10px;
    background: lightgrey;
    border: 0px;
    border-radius: 4px;
    pointer-events: none;
    display: block;
}

.centred {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#descriptions {
/*    margin-left: 20%;*/
/*    margin-right: 20%*/
    overflow-y: scroll;
    height:450px;
    margin-left: 2%;
    margin-right: 2%;
}

:target {
    background-color: lightgray;
}

a {
    text-decoration: none;
}

a.citation {
    target: _self
}

li {
    margin: 10px 0;
/*    clear: both;*/
/*    float: left;*/
}

.source{
    margin: 1px;
}

li:hover {
/*    display: inline-block;*/
}

nav {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}

button {
    cursor: pointer;
}

button.popup-button {
    margin: 5px;
    margin-left: 0px;
}

.popup-box {
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
    display: none;
}

.popup-content {
    background-color: white;
    margin: 10% auto;
    padding: 20px;
    border: 1px solid #888888;
    width: 50%;
    min-height: 60%;
/*    height: 60%;*/
/*    overflow-y: scroll;*/
}

button.popup-close {
    float: right;
}

.show {
    display: block;
}

sup{
    line-height: 0px;
}

body {
    font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
    font-size: 100%;
    line-height: 22px;
}

html {
    -webkit-font-smoothing: antialiased;
}

summary {
    cursor: pointer;
}

summary:empty:before {
    content: "Click for more details";
}

.two-column {
    column-count: 2;
    column-gap: 40px;
}

h3 {
    margin: 7px;
    margin-left: 0;
}

p + h3 {
    margin: 0px;
    margin-top: 20px;
}

h3 ~ nav {
    margin-top: 10px;
}

p {
    margin-top: 7px;
    margin-bottom: 7px;
}

